--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "ImageViewer",
+  "author": "Hiro Kai",
+  "description": "Image viewer with condition filtering.",
   "version": "0.1.0",
   "main": "src/main.js",
   "devDependencies": {
@@ -14,6 +16,7 @@
     "csv": "^1.1.0",
     "csv-parse": "^1.1.5",
     "d3": "^4.1.1",
+    "electron-builder": "^19.37.2",
     "electron-prebuilt": "^1.3.1",
     "jquery": "^3.1.0",
     "lodash": "^4.14.0",
@@ -22,8 +25,17 @@
     "react-dom": "^15.2.1",
     "request": "^2.74.0",
     "toml": "^2.3.0",
-    "webpack": "^1.13.1",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^0.14.1",
+    "electron": "^1.7.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "webpack": "^3.8.1",
+    "xmlhttprequest": "^1.8.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "npm run pack:mac && npm run pack:win",
+    "pack:mac": "./node_modules/.bin/build --mac --x64",
+    "pack:win": "./node_modules/.bin/build --win --x64"
+  }
 }
